--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Doc-Appointment-system",
+  "name": "Doc-Appoinment-system",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "server": "nodemon serevr.js",
     "client": "npm start --prefix ./client ",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "keywords": [],
   "author": "techinfyt ",
